[project]
name = "phen-prior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "nltk>=3.9.1",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "presidio-analyzer>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "rich>=14.0.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "typer>=0.15.2",
]
